deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yolo-api
  namespace: yolo-app
  labels:
    app: yolo-api
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: yolo-api
  type: ClusterIP
